Fix scrolling issue on iphone & refactor how we will do the tweet transition

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -202,7 +202,7 @@ h2 {
 }
 
 .tweets-spacer {
-	margin-top: $fade-duration + 1000px;
+	height: 200vh;
 	width: 100%;
 }
 
